Java 17 compatibility update: - Upgrade Gradle to 7.3 - Upgrade dependency versions - Fixes to build.gradle files all around - Fixes to builder module