@@ -22,17 +22,29 @@ plugins {
 
 final sourceCompatibility = 1.11
 final mainClassName = 'eu.esens.espdvcd.designer.Server'
+applicationDefaultJvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
 
 dependencies {
-    compile project(':builder')
-    compile project(':codelists')
-    compile project(':model')
-    compile project(':validator')
+    implementation project(':builder')
+    implementation project(':codelists')
+    implementation project(':model')
+    implementation project(':validator')
+    implementation project(':edm')
+// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.7'
-    compile 'com.sparkjava:spark-core:2.9.1'
+    // https://mvnrepository.com/artifact/javax.validation/validation-api
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+// https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator
+    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
+
+// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0'
+    implementation 'com.sparkjava:spark-core:2.9.3'
  // https://mvnrepository.com/artifact/com.typesafe/config
-    compile group: 'com.typesafe', name: 'config', version: '1.3.3'
+    implementation group: 'com.typesafe', name: 'config', version: '1.3.3'
 }
 
 /**
@@ -48,6 +60,8 @@ run {
 task runBackendOnly(type: JavaExec) {
     main = mainClassName
     classpath = sourceSets.main.runtimeClasspath
+    applicationDefaultJvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
+
 }
 
 task runWebApp(type: Exec) {
